[package]
name = "lpserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grb = "1.3.0"
petgraph = { path = "../petgraph", branch = "multi_predecessors" }
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde-pickle = "1.1.1"
zmq = "0.10.0"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1